--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "crypto": "^1.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
     "react-rating-stars-component": "^2.2.0",
